Return to using kPane so that NVDA arrow text editing echo works again

Using the correct role kMenu actually breaks editing feedback in
textfields. Use the incorrect role for now. If NVDA fixes this we can
return to using the correct role, which would provide better feedback
users about the menu opening. However, this feedback will not be
necessary if the autofill information is provided upon focus, which
is ultimately the best scenario, as the autofill available state is
then provided immediately to the user whether the menu is visible or
not.

This does not affect other supported screen readers, including JAWS,
ChromeVox and VoiceOver.

Bug: 878196
Change-Id: I91659cc333f434565992f6269f8bd9a917fb8a5a
Reviewed-on: https://chromium-review.googlesource.com/1194256
Commit-Queue: Aaron Leventhal <aleventhal@chromium.org>
Reviewed-by: Dominic Mazzoni <dmazzoni@chromium.org>
Reviewed-by: Evan Stade <estade@chromium.org>
Reviewed-by: Fabio Tirelo <ftirelo@chromium.org>
Cr-Commit-Position: refs/heads/master@{#587148}
Former-commit-id: 857aee041d5ea69a021aa98542ad49018adf4f2c